fix for safari layout issue

--- a/modules/container-client/src/css/single-component-editor.less
+++ b/modules/container-client/src/css/single-component-editor.less
@@ -124,6 +124,7 @@ body {
   display: -ms-flex;
 
   .preview-pane{
+    flex-shrink: 0;
     .player-btn-holder {
       float: right;
       margin-bottom: 20px;
